# VDS

./: .dockerignore  .gitignore  CHANGELOG.md  MEDIA_REFACTOR_PLAN.md  README.md  deploy.sh  package-lock.json  package.json
desktop/: main.js  media-agent-manager.js  preload.js  window-metadata-helper.js
docs/: LOGGING_DEBUG_SYSTEM.md  MEDIA_AGENT_MODULARIZATION.md  PROJECT_MANUAL.md  PROJECT_MANUAL_COMPACT.md
media-agent/: CMakeLists.txt  README.md  vcpkg.json
media-agent/src/: agent_diagnostics.cpp  agent_diagnostics.h  agent_events.cpp  agent_events.h  agent_lifecycle.cpp  agent_lifecycle.h  agent_rpc_router.cpp  agent_rpc_router.h  agent_runtime.h  agent_status_json.cpp  agent_status_json.h  ffmpeg_probe.cpp  ffmpeg_probe.h  host_capture_plan.cpp  host_capture_plan.h  host_capture_process.cpp  host_capture_process.h  host_pipeline.cpp  host_pipeline.h  host_session_controller.cpp  host_session_controller.h  host_state_json.cpp  host_state_json.h  json_protocol.cpp  json_protocol.h  main.cpp  media_audio.cpp  media_audio.h  native_artifact_preview.cpp  native_artifact_preview.h  native_live_preview.cpp  native_live_preview.h  native_surface_layout.cpp  native_surface_layout.h  native_video_surface.cpp  native_video_surface.h  obs_ingest_media.cpp  obs_ingest_media.h  obs_ingest_runtime.cpp  obs_ingest_runtime.h  (+41 more)
media-agent/tests/: media_agent_unit_tests.cpp
public/: app.js  index.html  style.css
scripts/: build-media-agent.ps1  check-logging-policy.ps1  manual-media-agent-e2e.ps1  prepare-server-release.js  release-check.js  smoke-media-agent.ps1  start-dual-test-env.ps1  start-dual-web-test-env.ps1  start-electron-dev.ps1  start-triple-nwn-test-env.ps1  start-triple-test-env.ps1  test-media-agent.ps1  test-server-core.js  test-vds-web-protocol.js  verify-media-agent.ps1
server/: .dockerignore  Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json  server-core.js
server/public/: app-native-overrides.js  app.js  index.html  style.css
vds_web/: index.html  tsconfig.json  vite.config.ts
vds_web/src/: capabilities.ts  datachannel-protocol.ts  diagnostics.ts  main.ts  signaling.ts  styles.css  webcodecs-audio-player.ts  webcodecs-player.ts
